--- a/index.html
+++ b/index.html
@@ -37,11 +37,17 @@ background-color:#0000FF;
  }
  .p1{
  	margin-left: 10px;
- 	margin-right: 10px;
+ 	
  	font-weight: bolder;
  	}
+			
+			ol{
+				margin-left: 0;
+				font-weight: bolder;
+			}			
  	.div2{
  		width: 100%;
+		 margin-left:20px;
 
  
  	}
@@ -63,23 +69,25 @@ background-color:#0000FF;
 		<ul class="p1">
 			<li>Maths</li>
 			<li>English</li>
-             <li>Science</li>
+                        <li>Science</li>
+			</ul>
              <h3>Names of my best friends</h3>
              <ol>
              	<li>Ope</li>
              	<li>Olamide</li>
              	<li>Tetisimi</li>
              </ol>
-         </ul>
+         
          <h3>My best food</h3>
-         <ol type="A" class="p1">
+         <ol type="A">
          	<li>Rice</li>
          	<li>Plantian</li>
          	<Li>Potato</li>
+	</ol>
          		<h3>My hobbies</h3>
          		<p class="p1">Singing, Dancing, Sleeping-</p>
          		<h3>Places visited</h3>
-         			<ol type="i" class="p1">
+         			<ol type="i">
          				<li>Tera cultrue</li>
          				<li>The national museum</li>
          				<li>University of lagos</li>
